deploy/k8s-gke/deploy-www.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: Blogpost updates, content preprocessing changed
  labels:
    app: lescinskas-lt-deploy
  name: lescinskas-lt-deploy
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: lescinskas-lt-pod
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: lescinskas-lt-pod
    spec:
      containers:
      - image: eu.gcr.io/lescinskas-lt/nginx-server:v13
        imagePullPolicy: Always
        name: nginx-server
        resources: {}
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - lescinskas-lt-pod
            topologyKey: "kubernetes.io/hostname"
