deploy/k8s-gke/nodeport-beta.yml
apiVersion: v1
kind: Service
metadata:
  name: beta-lescinskas-lt-nodeport
spec:
  selector:
    app: beta-lescinskas-lt-pod
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
