deploy/k8s-gke/nodeport-www.yml
apiVersion: v1
kind: Service
metadata:
  name: lescinskas-lt-nodeport
spec:
  selector:
    app: lescinskas-lt-pod
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
