deploy/k8s-gke/ingress.yml
apiVersion: "extensions/v1beta1"
kind: Ingress
metadata:
  name: "lescinskas-lt-ingress"
  namespace: "default"
  annotations:
    networking.gke.io/managed-certificates: "beta-lescinskas-lt-cert,lescinskas-lt-cert,www-lescinskas-lt-cert"
spec:
  backend:
    serviceName: "lescinskas-lt-nodeport"
    servicePort: "http"
  rules:
  - host: "beta.lescinskas.lt"
    http:
      paths:
      - backend:
          serviceName: "beta-lescinskas-lt-nodeport"
          servicePort: "http"
  - host: "lescinskas.lt"
    http:
      paths:
      - backend:
          serviceName: "lescinskas-lt-nodeport"
          servicePort: "http"
  - host: "www.lescinskas.lt"
    http:
      paths:
      - backend:
          serviceName: "lescinskas-lt-nodeport"
          servicePort: "http"
